# CV6_project

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Table2D.cpp  Table2D.h  VideoHelpers.cpp
include/: BallTracker.h  Balls.h  FrameProcessing.h  MiniMap.h  ObjectRecognition.h  Segmentation.h  Table2D.h  Testing.h  VideoHelpers.h
src/: BallDetector.cpp  BallDetector.h  BallTracker.cpp  Balls.cpp  FrameProcessing.cpp  Main.cpp  MiniMap.cpp  ObjectRecognition.cpp  Segmentation.cpp  Table2D.cpp  Table2D.h  Testing.cpp  VideoHelpers.cpp  object_detection.cpp  object_detection.hpp
